--- a/mcp-config-stdio.json
+++ b/mcp-config-stdio.json
@@ -13,8 +13,6 @@
       "command": "uvx",
       "args": ["synergy-age-mcp"],
       "env": {
-        "MCP_PORT": "3002",
-        "MCP_HOST": "0.0.0.0",
         "MCP_TRANSPORT": "stdio"
       }
     },
@@ -22,16 +20,12 @@
       "command": "uvx",
       "args": ["opengenes-mcp"],
       "env": {
-        "MCP_PORT": "3001",
-        "MCP_HOST": "0.0.0.0",
         "MCP_TRANSPORT": "stdio"
       }
     },
     "pharmacology-mcp": {
       "command": "uvx",
-      "args": ["pharmacology-mcp", "server", "--port", "3001"],
-      "env": {}
+      "args": ["--from", "pharmacology-mcp", "stdio"]
     }
-    
   }
 } 
